--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Explore Exciting Queenstown Activities 🌍"/>
+      content="Skin Care Store 👁️"/>
     <meta property="og:image" content="%PUBLIC_URL%/favicon.png" /> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
